--- a/xf_partner_contract/report/contract_report_template.xml
+++ b/xf_partner_contract/report/contract_report_template.xml
@@ -12,11 +12,6 @@
                              t-att-src="image_data_uri(res_company.logo)"
                              alt="logo"
                              style="height:50px; width:150px; position: absolute; right: 25mm; top:0mm;"/>
-
-                        <!--                        <span class="company_address"-->
-                        <!--                              t-field="res_company.partner_id"-->
-                        <!--                              t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'-->
-                        <!--                              style="text-align:center; position: absolute; right: 40mm; top:20mm;"/>-->
                         <div class="partner" style="position: absolute; right: 40mm; top:20mm; width:220px;">
                             <div>
                                 <t t-esc="docs.partner_id.name"/>
@@ -67,7 +62,7 @@
                             <br/>
                             DUTCH CARIBBEAN
                         </div>
-                        <div class="col-3" style="position: absolute; left: 604px; top: 0px;">
+                        <div class="col-4" style="position: absolute; left: 604px; top: 0px; width:900px;">
                             <em style="font-style: normal; text-align:center; font-weight: 701; color: #69C;">CAMBER OF
                                 COMMERCE:
                             </em>
@@ -85,10 +80,10 @@
                             <br/>
                             INFO@GLOBALUCOCOMPANY.COM
                         </div>
-                        <div class="col-3" style="position: absolute; right: 0px; top: 6px;">
-                            <img src="/xf_partner_contract/static/description/niwo.png" width="100px" height="auto"
-                                 style="padding-right: 12px;"/>
-                            <img src="/xf_partner_contract/static/description/ISCC.png" width="100px" height="auto"
+                        <div class="logo" style="position: absolute; right: 80px; top: 6px;">
+                            <img src="/xf_partner_contract/static/description/niwo.png" width="110px" height="auto"
+                                 style="padding-right: 26px;"/>
+                            <img src="/xf_partner_contract/static/description/ISCC.png" width="160px" height="auto"
                                  style="padding-left: 12px;"/>
                         </div>
                         <hr width="100%"
@@ -109,7 +104,7 @@
             <div class="text-left" style="margin-left:20mm; margin-right:20mm;">
                 <h2>
                     <t t-if="docs.type =='sale'">
-                        Sale Order
+                        Sales order
                     </t>
                     <t t-else="">
                         Purchase order
@@ -139,7 +134,12 @@
                             </t>
                         </label>
                         :&amp;nbsp;
-                        <t t-esc="docs.name"/>
+                        <t t-if="docs.type =='sale'">
+                            <t t-esc="docs.sale_report_name"/>
+                        </t>
+                        <t t-else="">
+                            <t t-esc="docs.purchase_report_name"/>
+                        </t>
                     </div>
                 </t>
                 <div style="font-weight: bold; padding-top:18px;">
@@ -147,7 +147,7 @@
                 </div>
                 <div style="padding-top:8px;">
                     <label style="width:240px;">
-                        product
+                        Product
                     </label>
                     <span>
                         :&amp;nbsp;
@@ -221,12 +221,17 @@
                     </div>
                 </t>
                 <t t-if="docs.appearance">
-                    <div>
-                        <label style="width:240px;">
-                            Appearance
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.appearance"/>
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Appearance
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.appearance"/>
+
+                        </div>
                     </div>
                 </t>
                 <div>
@@ -263,30 +268,43 @@
                     <t t-esc="result.quantity"/>&amp;nbsp;MT +/- 5% weight difference allowed
                 </div>
                 <t t-if="docs.packaging">
-                    <div>
-                        <label style="width:240px;">
-                            Packaging
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.packaging"/>
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Packaging
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.packaging"/>
+                        </div>
                     </div>
                 </t>
                 <t t-if="docs.expected_containers">
-                    <div>
-                        <label style="width:240px;">
-                            Expected amount of containers
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.expected_containers"/>
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Expected amount of containers
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.expected_containers"/>
+
+                        </div>
                     </div>
                 </t>
-                <t t-if="docs.notes">
-                    <div>
-                        <label style="width:240px;">
-                            Delivery terms
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.notes"/>
+                <t t-if="docs.delivery_term_id">
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Delivery terms
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.delivery_term_id.name"/>
+                        </div>
                     </div>
                 </t>
                 <t t-if="docs.period_f_delivery">
@@ -429,7 +447,7 @@
             <div class="text-left" style="margin-left:20mm; margin-right:20mm;">
                 <h2>
                     <t t-if="docs.type =='sale'">
-                        Sale Order
+                        Sales Order
                     </t>
                     <t t-else="">
                         Purchase order
@@ -459,7 +477,12 @@
                             </t>
                         </label>
                         :&amp;nbsp;
-                        <t t-esc="docs.name"/>
+                        <t t-if="docs.type =='sale'">
+                            <t t-esc="docs.sale_report_name"/>
+                        </t>
+                        <t t-else="">
+                            <t t-esc="docs.purchase_report_name"/>
+                        </t>
                     </div>
                 </t>
                 <div style="font-weight: bold; padding-top:18px;">
@@ -527,12 +550,16 @@
                     </div>
                 </t>
                 <t t-if="docs.appearance">
-                    <div>
-                        <label style="width:240px;">
-                            Appearance
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.appearance"/>
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Appearance
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.appearance"/>
+                        </div>
                     </div>
                 </t>
                 <div>
@@ -552,30 +579,43 @@
                     Commercial terms
                 </div>
                 <t t-if="docs.packaging">
-                    <div>
-                        <label style="width:240px;">
-                            Packaging
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.packaging"/>
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Packaging
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.packaging"/>
+                        </div>
                     </div>
                 </t>
                 <t t-if="docs.expected_containers">
-                    <div>
-                        <label style="width:240px;">
-                            Expected amount of containers
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.expected_containers"/>
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Expected amount of containers
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.expected_containers"/>
+
+                        </div>
                     </div>
                 </t>
-                <t t-if="docs.notes">
-                    <div>
-                        <label style="width:240px;">
-                            Delivery terms
-                        </label>
-                        :&amp;nbsp;
-                        <t t-esc="docs.notes"/>
+                <t t-if="docs.delivery_term_id">
+                    <div class="row mx-0">
+                        <div>
+                            <label style="width:240px;">
+                                Delivery terms
+                            </label>
+                            :&amp;nbsp;
+                        </div>
+                        <div class="col-8 px-0 pl-1">
+                            <t t-esc="docs.delivery_term_id.name"/>
+                        </div>
                     </div>
                 </t>
                 <t t-if="docs.period_f_delivery">
@@ -718,7 +758,7 @@
                 <t t-set="lang" t-value="en_US"/>
                 <t t-call="xf_partner_contract.custom_contract_layout" t-lang="lang">
                     <div class="page" style="background-image:url('/xf_partner_contract/static/description/back.jpg');
-                        background-size:235mm 250mm; padding-top:0mm; font-family: Arial, Helvetica, sans-serif; font-weight: 8; line-height:1;">
+                        background-size:235mm 250mm; padding-top:0mm; font-family: Arial, Helvetica, sans-serif; font-weight: 8; line-height:1; font-size: .9rem;">
                         <t t-if="docs.line_ids">
                             <t t-set="j" t-value="1"/>
                             <t t-foreach="docs.line_ids" t-as="result">
@@ -741,7 +781,7 @@
                                         background-image:url('/xf_partner_contract/static/description/back.jpg');
                                         background-size:235mm 250mm; width:235mm; height:250mm; padding-top:0mm;">
                             <div class="text-left"
-                                 style="font-family: Arial, Helvetica, sans-serif; font-weight: 8; line-height:1; margin-left:20mm; margin-right:20mm;">
+                                 style="font-family: Arial, Helvetica, sans-serif; font-weight: 8; line-height:2; margin-left:20mm; margin-right:20mm;">
                                 <div style="font-weight: bold; font-size: 23px;">
                                     Documents to be provided by seller
                                 </div>
@@ -774,7 +814,7 @@
                                 <div class="row" style="padding-top:50px;">
                                     <div class="col-6">
                                         <div>
-                                            <t t-if="type =='sale'">
+                                            <t t-if="docs.type =='sale'">
                                                 Seller:&amp;nbsp;
                                                 <t t-esc="res_company.name"/>
                                             </t>
@@ -793,7 +833,7 @@
                                     </div>
                                     <div class="col-6">
                                         <div>
-                                            <t t-if="type =='sale'">
+                                            <t t-if="docs.type =='sale'">
                                                 Buyer:
                                                 <t t-esc="docs.partner_id.name"/>
                                             </t>
